--- a/Food_Reviews_for_Machine_Learning.ipynb
+++ b/Food_Reviews_for_Machine_Learning.ipynb
@@ -64,7 +64,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"/content/drive/MyDrive/Research Paper - 22/Research with Ria Apu/Submitted Paper-2022/Sentiment Analysis of Online Food Reviews using Machine Learning/Dataset/FoodReview_dataset.csv\")\n",
+        "df = pd.read_csv(\"FoodReview_dataset.csv\")\n",
         "df.head()"
       ],
       "metadata": {
